# heuristic-graph-coloring

./: .gitignore  Cargo.toml  README.md
data/: instances.tsv
examples/: instances.rs
instances/: README.md
output/: README.md
src/: lib.rs  main.rs
