[package]
name = "heuristic-graph-coloring"
description = "Heuristic algorithms for graph vertex coloring"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dsatur","rlf","greedy"]
categories = ["algorithms","data-structures","mathematics"]
exclude = ["/data"]

[dependencies]

[dev-dependencies]
poloto = "15"
